--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i -g
-    - run: cd .. && mkdir react-sandbox-test && cd react-sandbox-test && npx create-react-sandbox
-    - run: npm run build
+    - run: cd .. && mkdir react-sandbox-test && cd react-sandbox-test && npx create-react-sandbox client
+    - run: cd client && npm run build
