--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "create-react-sandbox",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Create a lightweight React sandbox on your local system that runs like Create React App but without all the dependencies.",
-  "main": "index.js",
-  "author": "Bruce Wu",
+  "author": "Bruce Wu <wu.bruce.x@gmail.com>",
   "license": "ISC",
   "bin": {
     "create-react-sandbox": "bin/index.js"
-  }
+  },
+  "keywords": ["react", "create-react-app", "sandbox", "boilerplate"],
+  "homepage": "https://github.com/bruce-x-wu/create-react-sandbox"
 }
