config: remove global npm install

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,6 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm i -g
+    - run: npm install
     - run: cd .. && mkdir react-sandbox-test && cd react-sandbox-test && npx create-react-sandbox client
     - run: cd ../react-sandbox-test/client && npm run build
