--- a/bin/static/js/package.json
+++ b/bin/static/js/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "webpack-dev-server",
+      "start": "webpack-dev-server --open --mode development --hot",
       "build": "webpack",
       "test": "echo \"Error: no test specified\" && exit 1"
     },
