--- a/.github/workflows/workflow_ts.yml
+++ b/.github/workflows/workflow_ts.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Test on Ubuntu
+name: Test TypeScript support on Ubuntu
 
 on:
   push:
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
-    - run: cd .. && mkdir react-sandbox-test && cd react-sandbox-test && npx create-react-sandbox client
-    - run: cd ../react-sandbox-test/client && npm run build
+    - run: cd .. && mkdir react-sandbox-test && cd react-sandbox-test && npx create-react-sandbox -t client_ts
+    - run: cd ../react-sandbox-test/client_ts && npm run build
