--- a/.github/workflows/workflow_ts.yml
+++ b/.github/workflows/workflow_ts.yml
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
-    - run: cd .. && mkdir react-sandbox-test && cd react-sandbox-test && npx create-react-sandbox client_ts -t
-    - run: ls -a && cd client_ts && npm run build
+    - run: cd .. && mkdir react-sandbox-test && cd react-sandbox-test && npx create-react-sandbox client -t
+    - run: cd ../react-sandbox-test/client && npm run build
