--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -32,10 +32,10 @@ jobs:
         run: mkdir temp
 
       - name: Run Package Init Script
-        run: npx create-react-sandbox client ${{ matrix.flags }}
+        run: npx create-react-sandbox ${{ matrix.flags }}
         working-directory: ./temp
 
       - name: Run Package Build Script
         run: npm run build
-        working-directory: ./temp/client
+        working-directory: ./temp/app
 
