--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "create-react-sandbox",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Create a lightweight React sandbox on your local system that runs like Create React App but without all the dependencies.",
   "author": "B Wu <wu.bruce.x@gmail.com>",
   "license": "ISC",
+  "scripts": { },
   "bin": {
     "create-react-sandbox": "bin/index.js"
   },
